--- a/model_V2.ipynb
+++ b/model_V2.ipynb
@@ -48,6 +48,8 @@
     "import mrcnn.model as modellib\n",
     "from mrcnn import visualize\n",
     "\n",
+    "from pycocotools.coco import COCO\n",
+    "\n",
     "# Import COCO config\n",
     "sys.path.append(os.path.join(ROOT_DIR, 'samples/coco/'))\n",
     "import coco\n",
