--- a/model_V2.ipynb
+++ b/model_V2.ipynb
@@ -105,6 +105,216 @@
     "if not os.path.exists(COCO_MODEL_PATH):\n",
     "    utils.download_trained_weights(COCO_MODEL_PATH)    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Configurations:\n",
+      "BACKBONE                       resnet101\n",
+      "BACKBONE_STRIDES               [4, 8, 16, 32, 64]\n",
+      "BATCH_SIZE                     1\n",
+      "BBOX_STD_DEV                   [0.1 0.1 0.2 0.2]\n",
+      "COMPUTE_BACKBONE_SHAPE         None\n",
+      "DETECTION_MAX_INSTANCES        100\n",
+      "DETECTION_MIN_CONFIDENCE       0.85\n",
+      "DETECTION_NMS_THRESHOLD        0.3\n",
+      "FPN_CLASSIF_FC_LAYERS_SIZE     1024\n",
+      "GPU_COUNT                      1\n",
+      "GRADIENT_CLIP_NORM             5.0\n",
+      "IMAGES_PER_GPU                 1\n",
+      "IMAGE_MAX_DIM                  1024\n",
+      "IMAGE_META_SIZE                14\n",
+      "IMAGE_MIN_DIM                  800\n",
+      "IMAGE_MIN_SCALE                0\n",
+      "IMAGE_RESIZE_MODE              square\n",
+      "IMAGE_SHAPE                    [1024 1024    3]\n",
+      "LEARNING_MOMENTUM              0.9\n",
+      "LEARNING_RATE                  0.001\n",
+      "LOSS_WEIGHTS                   {'rpn_class_loss': 1.0, 'rpn_bbox_loss': 1.0, 'mrcnn_class_loss': 1.0, 'mrcnn_bbox_loss': 1.0, 'mrcnn_mask_loss': 1.0}\n",
+      "MASK_POOL_SIZE                 14\n",
+      "MASK_SHAPE                     [28, 28]\n",
+      "MAX_GT_INSTANCES               100\n",
+      "MEAN_PIXEL                     [123.7 116.8 103.9]\n",
+      "MINI_MASK_SHAPE                (56, 56)\n",
+      "NAME                           tumor_detector\n",
+      "NUM_CLASSES                    2\n",
+      "POOL_SIZE                      7\n",
+      "POST_NMS_ROIS_INFERENCE        1000\n",
+      "POST_NMS_ROIS_TRAINING         2000\n",
+      "ROI_POSITIVE_RATIO             0.33\n",
+      "RPN_ANCHOR_RATIOS              [0.5, 1, 2]\n",
+      "RPN_ANCHOR_SCALES              (32, 64, 128, 256, 512)\n",
+      "RPN_ANCHOR_STRIDE              1\n",
+      "RPN_BBOX_STD_DEV               [0.1 0.1 0.2 0.2]\n",
+      "RPN_NMS_THRESHOLD              0.7\n",
+      "RPN_TRAIN_ANCHORS_PER_IMAGE    256\n",
+      "STEPS_PER_EPOCH                100\n",
+      "TOP_DOWN_PYRAMID_SIZE          256\n",
+      "TRAIN_BN                       False\n",
+      "TRAIN_ROIS_PER_IMAGE           200\n",
+      "USE_MINI_MASK                  True\n",
+      "USE_RPN_ROIS                   True\n",
+      "VALIDATION_STEPS               50\n",
+      "WEIGHT_DECAY                   0.0001\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class TumorConfig(Config):\n",
+    "    \"\"\"Configuration for training on the brain tumor dataset.\n",
+    "    \"\"\"\n",
+    "    # Give the configuration a recognizable name\n",
+    "    NAME = 'tumor_detector'\n",
+    "    GPU_COUNT = 1\n",
+    "    IMAGES_PER_GPU = 1\n",
+    "    NUM_CLASSES = 1 + 1  # background + tumor\n",
+    "    DETECTION_MIN_CONFIDENCE = 0.85    \n",
+    "    STEPS_PER_EPOCH = 100\n",
+    "    LEARNING_RATE = 0.001\n",
+    "    \n",
+    "config = TumorConfig()\n",
+    "config.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BrainScanDataset(utils.Dataset):\n",
+    "\n",
+    "    def load_brain_scan(self, dataset_dir, subset):\n",
+    "        \"\"\"Load a subset of the FarmCow dataset.\n",
+    "        dataset_dir: Root directory of the dataset.\n",
+    "        subset: Subset to load: train or val\n",
+    "        \"\"\"\n",
+    "        # Add classes. We have only one class to add.\n",
+    "        self.add_class(\"tumor\", 1, \"tumor\")\n",
+    "\n",
+    "        # Train or validation dataset?\n",
+    "        assert subset in [\"train\", \"val\", 'test']\n",
+    "        dataset_dir = os.path.join(dataset_dir, subset)\n",
+    "\n",
+    "        annotations = json.load(open(os.path.join(DATASET_DIR, subset, 'annotations_'+subset+'.json')))\n",
+    "        annotations = list(annotations.values())  # don't need the dict keys\n",
+    "\n",
+    "        # The VIA tool saves images in the JSON even if they don't have any\n",
+    "        # annotations. Skip unannotated images.\n",
+    "        annotations = [a for a in annotations if a['regions']]\n",
+    "\n",
+    "        # Add images\n",
+    "        for a in annotations:\n",
+    "            # Get the x, y coordinaets of points of the polygons that make up\n",
+    "            # the outline of each object instance. These are stores in the\n",
+    "            # shape_attributes (see json format above)\n",
+    "            # The if condition is needed to support VIA versions 1.x and 2.x.\n",
+    "            if type(a['regions']) is dict:\n",
+    "                polygons = [r['shape_attributes'] for r in a['regions'].values()]\n",
+    "            else:\n",
+    "                polygons = [r['shape_attributes'] for r in a['regions']]\n",
+    "\n",
+    "            # load_mask() needs the image size to convert polygons to masks.\n",
+    "            # Unfortunately, VIA doesn't include it in JSON, so we must read\n",
+    "            # the image. This is only managable since the dataset is tiny.\n",
+    "            image_path = os.path.join(dataset_dir, a['filename'])\n",
+    "            image = skimage.io.imread(image_path)\n",
+    "            height, width = image.shape[:2]\n",
+    "\n",
+    "            self.add_image(\n",
+    "                \"tumor\",\n",
+    "                image_id=a['filename'],  # use file name as a unique image id\n",
+    "                path=image_path,\n",
+    "                width=width, \n",
+    "                height=height,\n",
+    "                polygons=polygons\n",
+    "            )\n",
+    "\n",
+    "    def load_mask(self, image_id):\n",
+    "        \"\"\"Generate instance masks for an image.\n",
+    "       Returns:\n",
+    "        masks: A bool array of shape [height, width, instance count] with\n",
+    "            one mask per instance.\n",
+    "        class_ids: a 1D array of class IDs of the instance masks.\n",
+    "        \"\"\"\n",
+    "        # If not a farm_cow dataset image, delegate to parent class.\n",
+    "        image_info = self.image_info[image_id]\n",
+    "        if image_info[\"source\"] != \"tumor\":\n",
+    "            return super(self.__class__, self).load_mask(image_id)\n",
+    "\n",
+    "        # Convert polygons to a bitmap mask of shape\n",
+    "        # [height, width, instance_count]\n",
+    "        info = self.image_info[image_id]\n",
+    "        mask = np.zeros([info[\"height\"], info[\"width\"], len(info[\"polygons\"])],\n",
+    "                        dtype=np.uint8)\n",
+    "        for i, p in enumerate(info[\"polygons\"]):\n",
+    "            # Get indexes of pixels inside the polygon and set them to 1\n",
+    "            rr, cc = skimage.draw.polygon(p['all_points_y'], p['all_points_x'])\n",
+    "            mask[rr, cc, i] = 1\n",
+    "\n",
+    "        # Return mask, and array of class IDs of each instance. Since we have\n",
+    "        # one class ID only, we return an array of 1s\n",
+    "        return mask.astype(np.bool), np.ones([mask.shape[-1]], dtype=np.int32)\n",
+    "\n",
+    "    def image_reference(self, image_id):\n",
+    "        \"\"\"Return the path of the image.\"\"\"\n",
+    "        info = self.image_info[image_id]\n",
+    "        if info[\"source\"] == \"tumor\":\n",
+    "            return info[\"path\"]\n",
+    "        else:\n",
+    "            super(self.__class__, self).image_reference(image_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mask R-CNN Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Could not build a TypeSpec for KerasTensor(type_spec=TensorSpec(shape=(None, None, 4), dtype=tf.float32, name=None), name='tf.math.truediv/truediv:0', description=\"created by layer 'tf.math.truediv'\") of unsupported type <class 'keras.src.engine.keras_tensor.KerasTensor'>.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/angelor/Coding/brain_tumour_det_hacknotts/brain_tumour_detection/model_V2.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/angelor/Coding/brain_tumour_det_hacknotts/brain_tumour_detection/model_V2.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m model \u001b[39m=\u001b[39m modellib\u001b[39m.\u001b[39;49mMaskRCNN(\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/angelor/Coding/brain_tumour_det_hacknotts/brain_tumour_detection/model_V2.ipynb#X14sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     mode\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mtraining\u001b[39;49m\u001b[39m'\u001b[39;49m, \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/angelor/Coding/brain_tumour_det_hacknotts/brain_tumour_detection/model_V2.ipynb#X14sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     config\u001b[39m=\u001b[39;49mconfig, \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/angelor/Coding/brain_tumour_det_hacknotts/brain_tumour_detection/model_V2.ipynb#X14sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     model_dir\u001b[39m=\u001b[39;49mDEFAULT_LOGS_DIR\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/angelor/Coding/brain_tumour_det_hacknotts/brain_tumour_detection/model_V2.ipynb#X14sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m )\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/angelor/Coding/brain_tumour_det_hacknotts/brain_tumour_detection/model_V2.ipynb#X14sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m model\u001b[39m.\u001b[39mload_weights(\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/angelor/Coding/brain_tumour_det_hacknotts/brain_tumour_detection/model_V2.ipynb#X14sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     COCO_MODEL_PATH, \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/angelor/Coding/brain_tumour_det_hacknotts/brain_tumour_detection/model_V2.ipynb#X14sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     by_name\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/angelor/Coding/brain_tumour_det_hacknotts/brain_tumour_detection/model_V2.ipynb#X14sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     exclude\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39mmrcnn_class_logits\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mmrcnn_bbox_fc\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mmrcnn_bbox\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mmrcnn_mask\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/angelor/Coding/brain_tumour_det_hacknotts/brain_tumour_detection/model_V2.ipynb#X14sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m )\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/mrcnn/model.py:1832\u001b[0m, in \u001b[0;36mMaskRCNN.__init__\u001b[0;34m(self, mode, config, model_dir)\u001b[0m\n\u001b[1;32m   1830\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodel_dir \u001b[39m=\u001b[39m model_dir\n\u001b[1;32m   1831\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mset_log_dir()\n\u001b[0;32m-> 1832\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mkeras_model \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbuild(mode\u001b[39m=\u001b[39;49mmode, config\u001b[39m=\u001b[39;49mconfig)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/mrcnn/model.py:1870\u001b[0m, in \u001b[0;36mMaskRCNN.build\u001b[0;34m(self, mode, config)\u001b[0m\n\u001b[1;32m   1867\u001b[0m input_gt_boxes \u001b[39m=\u001b[39m KL\u001b[39m.\u001b[39mInput(\n\u001b[1;32m   1868\u001b[0m     shape\u001b[39m=\u001b[39m[\u001b[39mNone\u001b[39;00m, \u001b[39m4\u001b[39m], name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39minput_gt_boxes\u001b[39m\u001b[39m\"\u001b[39m, dtype\u001b[39m=\u001b[39mtf\u001b[39m.\u001b[39mfloat32)\n\u001b[1;32m   1869\u001b[0m \u001b[39m# Normalize coordinates\u001b[39;00m\n\u001b[0;32m-> 1870\u001b[0m gt_boxes \u001b[39m=\u001b[39m KL\u001b[39m.\u001b[39;49mLambda(\u001b[39mlambda\u001b[39;49;00m x: norm_boxes_graph(\n\u001b[1;32m   1871\u001b[0m     x, K\u001b[39m.\u001b[39;49mshape(input_image)[\u001b[39m1\u001b[39;49m:\u001b[39m3\u001b[39;49m]))(input_gt_boxes)\n\u001b[1;32m   1872\u001b[0m \u001b[39m# 3. GT Masks (zero padded)\u001b[39;00m\n\u001b[1;32m   1873\u001b[0m \u001b[39m# [batch, height, width, MAX_GT_INSTANCES]\u001b[39;00m\n\u001b[1;32m   1874\u001b[0m \u001b[39mif\u001b[39;00m config\u001b[39m.\u001b[39mUSE_MINI_MASK:\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/keras/src/utils/traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[1;32m     68\u001b[0m     \u001b[39m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[39m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m     71\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m     72\u001b[0m     \u001b[39mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/tensorflow/python/framework/type_spec.py:995\u001b[0m, in \u001b[0;36mtype_spec_from_value\u001b[0;34m(value)\u001b[0m\n\u001b[1;32m    991\u001b[0m \u001b[39mexcept\u001b[39;00m (\u001b[39mValueError\u001b[39;00m, \u001b[39mTypeError\u001b[39;00m) \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    992\u001b[0m   logging\u001b[39m.\u001b[39mvlog(\n\u001b[1;32m    993\u001b[0m       \u001b[39m3\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mFailed to convert \u001b[39m\u001b[39m%r\u001b[39;00m\u001b[39m to tensor: \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m (\u001b[39mtype\u001b[39m(value)\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m, e))\n\u001b[0;32m--> 995\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCould not build a TypeSpec for \u001b[39m\u001b[39m{\u001b[39;00mvalue\u001b[39m}\u001b[39;00m\u001b[39m of \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    996\u001b[0m                 \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39munsupported type \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(value)\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: Could not build a TypeSpec for KerasTensor(type_spec=TensorSpec(shape=(None, None, 4), dtype=tf.float32, name=None), name='tf.math.truediv/truediv:0', description=\"created by layer 'tf.math.truediv'\") of unsupported type <class 'keras.src.engine.keras_tensor.KerasTensor'>."
+     ]
+    }
+   ],
+   "source": [
+    "model = modellib.MaskRCNN(\n",
+    "    mode='training', \n",
+    "    config=config, \n",
+    "    model_dir=DEFAULT_LOGS_DIR\n",
+    ")\n",
+    "\n",
+    "model.load_weights(\n",
+    "    COCO_MODEL_PATH, \n",
+    "    by_name=True, \n",
+    "    exclude=[\"mrcnn_class_logits\", \"mrcnn_bbox_fc\", \"mrcnn_bbox\", \"mrcnn_mask\"]\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
