--- a/model_V2.ipynb
+++ b/model_V2.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Setting up the Environment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -22,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading pretrained model to /Users/angelor/Coding/brain_tumour_det_hacknotts/brain_tumour_detection/Mask_RCNN/mask_rcnn_coco.h5 ...\n",
+      "Downloading pretrained model to /Users/nathan.sidib/Code/VS_Code/Brain_Tumour_Detection_R-CNN_model/brain_tumour_detection/Mask_RCNN/mask_rcnn_coco.h5 ...\n",
       "... done downloading pretrained model!\n"
      ]
     }
@@ -108,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mask R-CNN Model"
+    "# 3. Mask R-CNN Model"
    ]
   },
   {
