--- a/model_V2.ipynb
+++ b/model_V2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Setting up the Environment"
+    "# 2. Setting up the Env"
    ]
   },
   {
