--- a/model_V2.ipynb
+++ b/model_V2.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "'''\n",
     "!git clone https://github.com/matterport/Mask_RCNN.git # load Mask R-CNN code implementation\n",
-    "!git clone https://github.com/ruslan-kl/brain-tumor.git # load new data set and annotations \n",
+    "!git clone https://github.com/leekunhee/Mask_RCNN # load Mask R-CNN code implementation (tensorflow2.2 compatible)\n",
+    "!git clone https://github.com/ruslan-kl/brain-tumor.git # load new data set and annotations\n",
+    "!git clone https://github.com/Anushaaelango/brain-tumor # load new data set and annotations (available)\n",
     "!pip3 install pycocotools\n",
     "\n",
     "rm -rf brain-tumor/.git/\n",
